# protocall

./: CMakeLists.txt  ProtoCallConfig.cmake.in  README.md  groups  project.config
boost/: static_assert.hpp
boost/config/: suffix.hpp
boost/config/stdlib/: stlport.hpp
cmake/: InstallLocation.cmake  protocall.proto.in
common/: CMakeLists.txt  utils.cpp  utils.h
examples/salutation/: CMakeLists.txt  hello.proto
examples/salutation/client/: client.cpp
examples/salutation/server/: server.cpp  service.cpp  service.h
plugin/: CMakeLists.txt  rpcgenerator.cpp  rpcgenerator.h  rpcplugin.cpp  rpcplugin.h  utilities.h
protocall/: CMakeLists.txt  ProtoCallConfig.cmake.in
protocall/plugin/: CMakeLists.txt  rpcgenerator.cpp  rpcgenerator.h  rpcplugin.cpp  rpcplugin.h  utilities.cpp  utilities.h
protocall/runtime/: CMakeLists.txt  responsehandler.cpp  responsehandler.h  rpcchannel.cpp  rpcchannel.h  rpcvoiddata.cpp  rpcvoiddata.h  service.cpp  service.h  servicedispatcher.h  servicemanager.cpp  vtkcommunicatorchannel.cpp  vtkcommunicatorchannel.h  zmqcommunicatorchannel.cpp  zmqcommunicatorchannel.h
protocall/runtime/proto/: void.proto
protocall/runtime/proto/protocall/: messages.proto  vtk.proto
protocall/serialization/: deserializer.h  serializer.h
runtime/: CMakeLists.txt  responsehandler.cpp  responsehandler.h  rpcchannel.cpp  rpcchannel.h  servicedispatcher.cpp  servicedispatcher.h  servicemanager.h  vtkcommunicatorchannel.cpp  vtkcommunicatorchannel.h
runtime/proto/: vtk.proto
scripts/gitsetup/: config
